Added compress-lib to easily compress to zip files

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "engine": "node >= 0.10",
   "devDependencies": {
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-gitinfo": "^0.1.7",
     "grunt-sass": "^0.17.0"
   }
