--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "begun-boilerplate",
   "description": "Boilerplate for a front-end app",
   "author": "Afif Sohaili",
-  "dependencies": {
-    "grunt": "0.x.x",
-    "grunt-contrib-copy": "0.4.x",
-    "grunt-contrib-cssmin": "0.6.x",
-    "grunt-contrib-uglify": "0.2.x",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-notify": "^0.4.1"
-  },
+  "dependencies": {},
   "engine": "node >= 0.10",
   "devDependencies": {
-    "grunt-contrib-compress": "^0.13.0",
-    "grunt-gitinfo": "^0.1.7",
-    "grunt-sass": "^0.17.0"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7"
   }
 }
